docker-magento2-2 PhpMyAdmin integration

--- a/.env.dist
+++ b/.env.dist
@@ -5,5 +5,8 @@ CONTAINER_USER=1000
 # Web public port
 LISTEN_WEB=127.0.0.1:8080
 
+# PhpMyAdmin public port
+LISTEN_PMA=127.0.0.1:8081
+
 # (Optional) Enable XDEBUG
 # XDEBUG=1
